--- a/src/app/pages/observation/manage-observations/manage-observations.component.html
+++ b/src/app/pages/observation/manage-observations/manage-observations.component.html
@@ -20,23 +20,15 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let observation of observations; let i=index">
-              <!--Title and Description-->
-              <td *ngIf="observation.language===localizeService.parser.currentLang">{{observation.title}}</td>
-              <td *ngIf="observation.language===localizeService.parser.currentLang" [innerHTML]="observation.description"></td>
-              <ng-container *ngFor="let translation of observation.translation">
-                <td *ngIf="translation.language===localizeService.parser.currentLang">{{translation.title}}</td>
-                <td *ngIf="translation.language===localizeService.parser.currentLang" [innerHTML]="translation.description"></td>        
-              </ng-container> 
+            <tr *ngFor="let observation of observations">
+              <!--Title-->
+              <td>{{observation | translateLanguage:'title':localizeService.parser.currentLang}}</td>    
+              <!--Description-->
+              <td [innerHTML]="observation | translateLanguage:'description':localizeService.parser.currentLang"></td>
               <!--Expired at-->
               <td>{{observation.expiredAt | timezone}}</td>
-              <!--CreatedBy-->
-              <td *ngIf="observation.language===localizeService.parser.currentLang">{{observation.createdBy}}</td>
-              <ng-container *ngFor="let translation of observation.translation">
-                <td *ngIf="translation.language===localizeService.parser.currentLang">
-                  {{translation.createdBy}}
-                </td>        
-              </ng-container>
+               <!--CreatedBy-->
+              <td>{{observation | translateLanguage:'createdBy':localizeService.parser.currentLang}}</td>
               <!--Edit delete-->
               <td class="ks-status">
                 <a href="javascript:void(0)" 
